--- a/Bao/BlazorSolution/Components/App.razor
+++ b/Bao/BlazorSolution/Components/App.razor
@@ -20,6 +20,7 @@
 <script src="_framework/blazor.web.js"></script>
 <script src="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.js"></script>
 <script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
+<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)"/>
 </body>
 
