--- a/Bao/BlazorSolution/Components/Pages/Counter.razor
+++ b/Bao/BlazorSolution/Components/Pages/Counter.razor
@@ -1,5 +1,4 @@
-﻿@page "/counter"
-@using Microsoft.AspNetCore.StaticFiles.Infrastructure
+﻿@attribute [Route(PageRoutes.Counter)]
 @rendermode InteractiveServer
 
 <PageTitle>Counter</PageTitle>
@@ -7,41 +6,46 @@
 <h1>Counter</h1>
 
 @if (currentCount < 10) {
-<p role="status">Current count: @currentCount</p>
+    <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click</button>
+    <button
+        class="btn btn-primary"
+        @onclick="IncrementCount"
+    >
+    Click
+    </button>
 
-<MyButton MyOnClick="IncrementCount" class="btn btn-success">Childcontent whatever special</MyButton>
+    <MyButton
+        MyOnClick="IncrementCount"
+        class="btn btn-success"
+    >
+    Childcontent whatever special
+    </MyButton>
 }
 else {
     <p>You win!</p>
 }
 
 <div class="mt-3">
-     @* <input @oninput="OnInput" value="@text"/> *@
-     <input 
-         @bind="text" 
-         @bind:event="oninput"
-         @bind:after="Search"
+    @* <input @oninput="OnInput" value="@text"/> *@
+    <input
+        @bind="text"
+        @bind:event="oninput"
+        @bind:after="Search"
     />
-     <button @onclick="OnClick">Clear</button>
-     <p>@text</p>
-     <p>@searchResults</p>
+    <button @onclick="OnClick">Clear</button>
+    <p>@text</p>
+    <p>@searchResults</p>
 </div>
 
 @code {
     private int currentCount = 0;
 
     string text = "";
-    
+
     string searchResults = "";
 
     private void IncrementCount(MouseEventArgs e) => currentCount++;
-
-    // async Task IncrementCountAsync() {
-    //     await Task.Delay(500);
-    //     currentCount+=2;
-    // }
 
     [Parameter] public int IncrementAmount { get; set; } = 1;
 
