--- a/Bao/BlazorSolution/Components/Pages/EditAssetType.razor
+++ b/Bao/BlazorSolution/Components/Pages/EditAssetType.razor
@@ -9,26 +9,24 @@
 
 <br/>
 
-<h3>With Mud Dropzone</h3>
+@* NOTE: Mud Dropzone *@
+<h3 style="margin-top: 150px">With Mud Dropzone</h3>
 
 <MudDropContainer
     T="Asset"
     Items="AllAssets"
     ItemsSelector="@((item, dropzone) => item.Type.ToString() == dropzone)"
     ItemDropped="ItemUpdatedAsync"
-    Class="d-flex flex-wrap flex-grow-1"
+    Class="dropContainer"
 >
     <ChildContent>
         @foreach (var type in Enum.GetValues<AssetType>()) {
             <MudDropZone
                 T="Asset"
                 Identifier="@type.ToString()"
-                Class="rounded mud-background-gray pa-6 ma-8 flex-grow-1"
+                Class="dropZone"
             >
-                <MudText
-                    Typo="Typo.h6"
-                    Class="mb-4"
-                >
+                <MudText Typo="Typo.h6" Class="mb-4" >
                     @type
                 </MudText>
             </MudDropZone>
@@ -46,51 +44,55 @@
 
 <br/>
 
-<h3>With BlazorSortable</h3>
+@* NOTE: BlazorSortable *@
+<h3 style="margin-top: 150px">With BlazorSortable</h3>
 
-@foreach (var type in Enum.GetValues<AssetType>()) {
-    <h6>@type</h6>
+<div class="dropContainer">
+    @foreach (var type in Enum.GetValues<AssetType>()) {
+        <div class="dropZone">
+            <MudText Typo="Typo.h6" Class="mb-4" >
+                @type
+            </MudText>
 
-    <Sortable
-        Items="AllAssets.Where(a => a.Type == type).ToList()"
-        Id="@type.ToString()"
-        Group="Group1"
-        Class="rounded mud-background-gray pa-6 ma-8 flex-grow-1"
-        OnAdd="ItemUpdatedAsync"
-    >
-        <MudPaper
-            Elevation="25"
-            Class="pa-4 my-4"
-        >
-            @context.Name
-        </MudPaper>
-    </Sortable>
-}
+            <Sortable
+                Items="AllAssets.Where(a => a.Type == type).ToList()"
+                Id="@type.ToString()"
+                Group="Group1"
+                OnAdd="ItemUpdatedAsync"
+            >
+                <MudPaper Elevation="25" Class="pa-4 my-4" >
+                    @context.Name
+                </MudPaper>
+            </Sortable>
+        </div>
+    }
+</div>
 
 <br/>
 
-<h3>With my own JS</h3>
+@* NOTE: With my own JS *@
+<h3 style="margin-top: 150px">With my own JS</h3>
 
-<div style="display: flex; gap: 50px; justify-content: center">
-    <div>
-        <p draggable="true" @ref="draggable">Drag me!</p>
-        @* @foreach (var type in Enum.GetValues<AssetType>()) { *@
-        @*     <p *@
-        @*         draggable="true" *@
-        @*         id="@type.ToString()" *@
-        @*     > *@
-        @*         @type *@
-        @*     </p> *@
-        @* } *@
-    </div>
+<div class="dropContainer">
+    @foreach (var type in Enum.GetValues<AssetType>()) {
+        <div class="dropZone data-drop-zone" data-dropZone="true" >
+            <MudText Typo="Typo.h6" Class="mb-4">
+                @type
+            </MudText>
 
-    <div @ref="dropZone">
-        <h5>Dropzone</h5>
-        <br/>
-    </div>
+            @foreach (var asset in AllAssets.Where(a => a.Type == type)) {
+                <div draggable="true" data-draggable >
+                    <MudPaper Elevation="25" Class="pa-4 my-4" >
+                        @asset.Name
+                    </MudPaper>
+                </div>
+            }
+        </div>
+    }
 </div>
 
-<div style="height: 600px"></div>
+@* Extend scrolling *@
+<div style="height: 600px"/>
 
 @code {
 
@@ -100,12 +102,14 @@
 
     private List<Asset> AllAssets = [];
 
+    // NOTE: For the Mud Dropzone
     private async Task ItemUpdatedAsync(MudItemDropInfo<Asset> dropItem) {
         dropItem.Item.Type = Enum.Parse<AssetType>(dropItem.DropzoneIdentifier);
 
         await AssetRepository.UpdateAssetAsync(dropItem.Item);
     }
 
+    // NOTE: For BlazorSortable
     private async void ItemUpdatedAsync(SortableEventArgs<Asset> eventArgs) {
         Logger.LogInformation("Changed type to {type}", eventArgs.To.Id);
 
@@ -114,19 +118,13 @@
         await AssetRepository.UpdateAssetAsync(eventArgs.Item);
     }
 
-    private ElementReference dropZone;
-
-    private ElementReference draggable;
-
-    private IJSObjectReference? JsObject;
-
+    // NOTE: With my own JS
     protected override async Task OnAfterRenderAsync(bool firstRender) {
-        if (!firstRender)
-            return;
+        if (!firstRender) return;
 
-        JsObject = await JS.InvokeAsync<IJSObjectReference>(
+        var module = await JS.InvokeAsync<IJSObjectReference>(
             "import", "./Components/Pages/EditAssetType.razor.js");
 
-        await JsObject.InvokeVoidAsync("initialize", draggable, dropZone);
+        await module.InvokeVoidAsync("initialize");
     }
 }
