--- a/Bao/BlazorSolution/Components/Dialogs/DTCreateAsset.razor
+++ b/Bao/BlazorSolution/Components/Dialogs/DTCreateAsset.razor
@@ -11,55 +11,51 @@
     </TitleContent>
 
     <DialogContent>
-        @* <MudForm *@
-        @*     @ref="_form" *@
-        @*     @bind-IsValid="_isValid" *@
-        @*     @bind-Errors="_errorMessages" *@
-        @* > *@
+        <MudForm
+            @ref="_form"
+        >
             <MudTextField
                 @bind-Value="Name"
                 Label="Enter name"
                 Required
                 Immediate
             />
-        <MudTextField
-            @bind-Value="ISIN"
-            Label="Enter ISIN"
-        />
-        @* Required attribute doesn't work *@
-        <MudSelect
-            Placeholder="Select type*"
-            T="AssetType?"
-            @bind-Value="Type"
-            Required
+            
+            <MudTextField
+                @bind-Value="ISIN"
+                Label="Enter ISIN"
+            />
+            
+            <MudSelect
+                Placeholder="Select type*"
+                T="AssetType"
+                @bind-Value="Type"
+                Validation="@((AssetType value) => (int)value == 0 ? "Please specify the asset type" : null)"
             >
                 @foreach (var type in Enum.GetValues<AssetType>()) {
-                    <MudSelectItem T="AssetType?" Value="@type"/>
+                    <MudSelectItem
+                        T="AssetType"
+                        Value="@type"
+                    />
                 }
             </MudSelect>
-            @* @foreach (var message in _errorMessages) { *@
-            @*     @message *@
-            @* } *@
-        @* </MudForm> *@
+        </MudForm>
     </DialogContent>
 
     <DialogActions>
         <MudButton OnClick="@(() => MudDialog.Cancel())">Cancel</MudButton>
         <MudButton
+            ButtonType="ButtonType.Submit"
             Color="Color.Primary"
-            Disabled="@(Name is "" || Type is null)"
-            OnClick="@(() => {
-                         // await _form.Validate();
+            OnClick="@( () => {
+                         _form.Validate();
 
-                         // if (_isValid) {
-                             MudDialog.Close(DialogResult.Ok(new ReturnType(Name, ISIN, Type!.Value)));
-                         // }
-                         // else {
-                             // Console.WriteLine(string.Join(", ", _errorMessages));
-                         // }
+                         if (_form.IsValid) {
+                             MudDialog.Close(DialogResult.Ok(new ReturnType(Name, ISIN, Type)));
+                         }
                      })"
         >
-            OK
+            Submit
         </MudButton>
     </DialogActions>
 </MudDialog>
@@ -72,20 +68,8 @@
     public string Name { get; set; } = string.Empty;
 
     public string ISIN { get; set; } = string.Empty;
-    
-    private AssetType? Type { get; set; }
-    
-    // private AssetType? _selectedType {
-        // get => Type;
-        // set {
-            // if (value.HasValue) Type = value.Value;
-        @* } *@
-    @* } *@
 
+    private AssetType Type { get; set; }
 
-    // private bool _isValid;
-
-    // private string[] _errorMessages = [];
-
-    // private MudForm _form = null!;
+    private MudForm _form = null!;
 }
