--- a/Bao/BlazorSolution/Components/Pages/MyButton.razor
+++ b/Bao/BlazorSolution/Components/Pages/MyButton.razor
@@ -6,14 +6,15 @@
 </button>
 
 @code {
-    
-    [Parameter]
-    public EventCallback<MouseEventArgs> MyOnClick { get; set; }
-    
+
+    [Parameter] public EventCallback<MouseEventArgs> MyOnClick { get; set; }
+
     // [Parameter]
     // public string ButtonContent { get; set; } = string.Empty;
 
-    [Parameter] public RenderFragment? ChildContent { get; set; }
+    [Parameter]
+    [EditorRequired]
+    public RenderFragment ChildContent { get; set; }
     
     [Parameter (CaptureUnmatchedValues = true)]
     public Dictionary<string, object> AdditionalAttributes { get; set; } = new();
