--- a/Bao/BlazorSolution/Components/Layout/MainLayout.razor
+++ b/Bao/BlazorSolution/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using BlazorProject.Services
+@inherits LayoutComponentBase
 <MudThemeProvider/>
 <MudPopoverProvider/>
 <MudDialogProvider/>
