--- a/Bao/BlazorSolution/Components/Pages/Portfolios.razor
+++ b/Bao/BlazorSolution/Components/Pages/Portfolios.razor
@@ -2,6 +2,7 @@
 @using System.Globalization
 @using BlazorProject.Components.Dialogs
 @using BlazorProject.Data
+@using BlazorProject.Services
 @inject IDialogService DialogService
 @inject ILogger<Portfolios> Logger
 @inject ISnackbar Snackbar
